Inserção de imagem

--- a/rde07_anajulia.html
+++ b/rde07_anajulia.html
@@ -20,6 +20,9 @@
         <dt><font color="green">Branch Secundária</font></dt>
         <dd>braço secundário de um projeto em um repositório</dd>
     </dl>
+    <figure>
+        <img src="img/branche.png" alt="Imagem Funcionamento dos Branches" width="500">
+    </figure>
     
 </body>
 </html>
