--- a/rde07_anajulia.html
+++ b/rde07_anajulia.html
@@ -23,6 +23,9 @@
     <figure>
         <img src="img/branche.png" alt="Imagem Funcionamento dos Branches" width="500">
     </figure>
+    <h3>Hospedagem</h3>
+    <p><b>O GitHub Pages oferece hospedagem gratuita de sites.</b>Basta criar uma conta e um repositório público e a URL será:</p>
+    <p><font color="blue"><i>https://nomeusuario.github.io/repositório</i></font></p>
     
 </body>
 </html>
